bits and pieces

--- a/Cloudental-web/src/main/webapp/screens/test/test_ajax.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/test/test_ajax.xhtml
@@ -37,7 +37,7 @@
 				<h:outputText value=" " />
 			</h:panelGrid>
 
-			<select id="sel1" onChange="show_txt('sel1','txt1');">
+			<select id="sel1" onchange="show_txt('sel1','txt1');">
 				<option>yes</option>
 				<option>No</option>
 				<option>Other</option>
