--- a/Cloudental-web/src/main/webapp/screens/frontend/template.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/frontend/template.xhtml
@@ -9,6 +9,7 @@
 <h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Insert title here</title>
+<h:outputStylesheet name="cloudental.css" library="css" />
 </h:head>
 <body>
 <ui:insert name="header">header</ui:insert>
@@ -19,6 +20,7 @@
               	
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/login.xhtml">Login</a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/PatientManagement.xhtml">Patient Management</a> <br />
+              	<a href="/Cloudental-web/cloudental/faces/screens/frontend/PricelistManagement.xhtml">Price List Management</a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/schedule.xhtml"> Schedule </a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/ActivityManagement.xhtml"> Activity</a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/VisitManagement.xhtml"> Visit</a> <br />
