--- a/Cloudental-web/src/main/webapp/screens/frontend/template.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/frontend/template.xhtml
@@ -21,6 +21,7 @@
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/login.xhtml">Login</a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/PatientManagement.xhtml">Patient Management</a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/PricelistManagement.xhtml">Price List Management</a> <br />
+              	<a href="/Cloudental-web/cloudental/faces/screens/frontend/DiscountManagement.xhtml">Discount Management</a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/schedule.xhtml"> Schedule </a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/ActivityManagement.xhtml"> Activity</a> <br />
               	<a href="/Cloudental-web/cloudental/faces/screens/frontend/VisitManagement.xhtml"> Visit</a> <br />
