1.fixed broken navigation rule from login to patientmgt screen 2.made right side menu part a facet 'menu' 3. removed 'menu' facet from login screen

--- a/Cloudental-web/src/main/webapp/screens/frontend/login.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/frontend/login.xhtml
@@ -12,38 +12,24 @@
 		<h:messages />
 	</ui:define>
 
-
+	<ui:define name="menu">
+	</ui:define>
 	<ui:define name="content">
-
 		<h:outputText value="Login" />
 		<h:messages/>
 		<h:form>
 			<h:panelGrid columns="2">
-
 				<h:outputText value="Username: " />
 				<h:inputText value="#{loginRequest.username}" label="Username"
 					required="true" />
 				<h:outputText value="Password: " />
 				<h:inputText value="#{loginRequest.password}" label="Password"
 					required="true" />
-
 				<h:outputText value=" " />
 				<h:commandButton value="Login" action="#{loginRequest.login}" />
-
-
 			</h:panelGrid>
 		</h:form>
-
-
 		<br />
-
-
-
-
-
-
-
 	</ui:define>
-
 </ui:composition>
 </html>
