Patient Management part2

--- a/Cloudental-web/src/main/webapp/screens/frontend/ActivityManagement.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/frontend/ActivityManagement.xhtml
@@ -66,9 +66,7 @@
 					<h:outputText value=" " />
 					
 					<h:panelGroup>
-						<h:commandButton value="Create" action="#{activityManagementBean.createActivity}" >
-							<f:ajax execute="@this" />
-						</h:commandButton>
+						<h:commandButton value="Create" action="#{activityManagementBean.createActivity}" />
 					</h:panelGroup>
 				</h:panelGrid>
 			</p:panel>
