Layout update off all pages Activity Management bean improvement Patient Management bean improvement

--- a/Cloudental-web/src/main/webapp/screens/frontend/DiscountManagement.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/frontend/DiscountManagement.xhtml
@@ -7,12 +7,9 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/screens/frontend/template.xhtml">
+
 	<ui:define name="header">
-    	Discounts 
-    	<br />
-		<h:outputText value="#{userHolder.currentUser.username}"></h:outputText>
-		<br />
-		<h:messages />
+    	<title>Discounts Management Page </title>
 	</ui:define>
 
 	<ui:define name="content">
