--- a/Cloudental-web/src/main/webapp/screens/frontend/VisitManagement.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/frontend/VisitManagement.xhtml
@@ -8,9 +8,9 @@
 
 <ui:composition template="/screens/frontend/template.xhtml">
 	<ui:define name="header">
-    	Visit Management 
-    	<br />
+    	<title>Visit Management</title>
 	</ui:define>
+	
 
 
 	<ui:define name="content">
