--- a/Cloudental-web/src/main/webapp/screens/frontend/template.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/frontend/template.xhtml
@@ -12,34 +12,45 @@
 <h:outputStylesheet name="cloudental.css" library="css" />
 </h:head>
 <body>
-
-
-	<!-- ********** test  messages ********** -->
-	<h:outputFormat value="#{msgs.username}">
-		<f:param value="#{userHolder.currentUser.username}"/>
-	</h:outputFormat>
-	<br />
-	<h:messages />
+	
 
     <table>
+     	<tr >
+        	<td colspan="2"> 
+        	<!-- ********** test  messages ********** -->
+			<h:outputFormat value="#{msgs.username}">
+				<f:param value="#{userHolder.currentUser.username}"/>
+			</h:outputFormat>
+			<br />
+			<h:messages />
+        	</td>
+        </tr>
          <tr>
-              <td>
+              <td style="vertical-align: top; padding: 10px;">
+ 
             	<ui:insert name="menu" > 
-	            	<a href="/Cloudental-web/cloudental/faces/screens/frontend/login.xhtml">Login</a> <br />
-	              	<a href="/Cloudental-web/cloudental/faces/screens/frontend/PatientManagement.xhtml">Patient Management</a> <br />
-	              	<a href="/Cloudental-web/cloudental/faces/screens/frontend/PricelistManagement.xhtml">Price List Management</a> <br />
-	              	<a href="/Cloudental-web/cloudental/faces/screens/frontend/DiscountManagement.xhtml">Discount Management</a> <br />
-	              	<a href="/Cloudental-web/cloudental/faces/screens/frontend/schedule.xhtml"> Schedule </a> <br />
-	              	<a href="/Cloudental-web/cloudental/faces/screens/frontend/ActivityManagement.xhtml"> Activity</a> <br />
-	              	<a href="/Cloudental-web/cloudental/faces/screens/frontend/VisitManagement.xhtml"> Visit</a> <br />
+            	
+	            <p:menu>  
+		        	<p:menuitem value="Login" url="/cloudental/faces/screens/frontend/login.xhtml"  icon="ui-icon-document" />
+		        	<p:menuitem value="Patient" url="/cloudental/faces/screens/frontend/PatientManagement.xhtml"  icon="ui-icon-document" />
+		        	<p:menuitem value="Price List" url="/cloudental/faces/screens/frontend/PricelistManagement.xhtml"  icon="ui-icon-document" />
+		        	<p:menuitem value="Discount" url="/cloudental/faces/screens/frontend/DiscountManagement.xhtml"  icon="ui-icon-document" />
+		        	<p:menuitem value="Schedule" url="/cloudental/faces/screens/frontend/schedule.xhtml"  icon="ui-icon-document" />
+		        	<p:menuitem value="Activity" url="/cloudental/faces/screens/frontend/ActivityManagement.xhtml"  icon="ui-icon-document" />
+		        	<p:menuitem value="Visit" url="/cloudental/faces/screens/frontend/VisitManagement.xhtml"  icon="ui-icon-document" />
+	    		</p:menu>
+	    		 
               	</ui:insert>
               </td>
               <td>
                   <ui:insert name="content" > content</ui:insert>
              </td>
         </tr>
+        <tr >
+        	<td colspan="2"></td>
+        </tr>
     </table>
 
-
+ 
 </body>
 </html>
