random warnings fixed

--- a/Cloudental-web/src/main/webapp/screens/frontend/PricelistManagement.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/frontend/PricelistManagement.xhtml
@@ -62,7 +62,7 @@
 						</f:facet>
 					</p:cellEditor>
 				</p:column>
-				<p:column headerText="Price" sortBy="#{item.Price}">
+				<p:column headerText="Price" sortBy="#{item.price}">
 					<p:cellEditor>
 						<f:facet name="output">
 							<h:outputText value="#{item.price}" />
