--- a/Cloudental-web/src/main/webapp/screens/backend/Page2.xhtml
+++ b/Cloudental-web/src/main/webapp/screens/backend/Page2.xhtml
@@ -5,7 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<ui:composition template="/backend/main_template.xhtml">
+<ui:composition template="/screens/templates/main-template.xhtml">
 	<ui:define name="header">
     	Page 2
     	<br />
