access: http://localhost:8080/Cloudental-cdi/

--- a/Cloudental-cdi/src/main/webapp/screens/base/cloudent-template.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/cloudent-template.xhtml
@@ -1,9 +1,10 @@
 <html xmlns="http://www.w3c.org/1999/xhtml"
+	  xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
-	<head>
+	<h:head>
 	  <title><ui:insert name="title">Cloudent 0.1</ui:insert></title>
-	</head>
+	</h:head>
 
 	<body>
 		<div id="header">
