--- a/Cloudental-cdi/src/main/webapp/screens/base/office-template.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/office-template.xhtml
@@ -8,9 +8,9 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<ui:composition template="/screens/base/cloudent-template.xhtml">
+		<ui:define name="title">Office Template</ui:define>>
 		<ui:define name="body">
 			<h:form>
-				<h:head></h:head>
 				<p:tabView id="tabContainer">
 					<p:tab id="schedulerTab" title="Scheduler" titletip="Calendar !">
 						<ui:insert name="scheduler"></ui:insert>
