patient management tab and bean

--- a/Cloudental-cdi/src/main/webapp/screens/office.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/office.xhtml
@@ -37,6 +37,10 @@
 			</p:dialog>
 		</ui:define>
 		<ui:define name="patients">
+			<h:form>
+				<p:panel header="PatientManagement" >
+				</p:panel>
+			</h:form>
 		</ui:define>
 	</ui:composition>
 </html>
