--- a/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" 
       xmlns:h="http://java.sun.com/jsf/html" 
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://java.sun.com/jsf/core">
       
 	<h:form>
 		<p:panel header="PatientManagement" >
@@ -13,6 +14,47 @@
 				<h:outputLabel value=" " />
 				<h:commandButton value="Create" action="#{office.patientManagment.createPatient()}" />
 			</h:panelGrid>
+			
+					<br />
+		<h:form id="patientListForm">
+			<p:dataTable value="#{office.patientManagment.patientList}" var="patient" id="patientList" editable="true"
+			 				rowKey="#{patient.id}"  selection="#{office.patientManagment.patient}" selectionMode="single">
+				<p:column headerText="id" sortBy="#{patient.id}" />
+				<p:column headerText="Name" sortBy="#{patient.name}">
+					<p:cellEditor>
+						<f:facet name="output">
+							<h:outputText value="#{patient.name}" />
+						</f:facet>
+						<f:facet name="input">
+							<p:inputText value="#{patient.name}" style="width:100%" />
+						</f:facet>
+					</p:cellEditor>
+				</p:column>
+				<p:column headerText="Surname" sortBy="#{patient.surname}">
+					<p:cellEditor>
+						<f:facet name="output">
+							<h:outputText value="#{patient.surname}" />
+						</f:facet>
+						<f:facet name="input">
+							<p:inputText value="#{patient.surname}" style="width:100%" />
+						</f:facet>
+					</p:cellEditor>
+				</p:column>
+				<p:column headerText="Comments" sortBy="#{patient.comments}">
+					<p:cellEditor>
+						<f:facet name="output">
+							<h:outputText value="#{patient.comments}" />
+						</f:facet>
+						<f:facet name="input">
+							<p:inputText value="#{patient.comments}" style="width:100%" />
+						</f:facet>
+					</p:cellEditor>
+				</p:column>
+				<p:column headerText="Options" style="width:50px">
+					<p:rowEditor />
+				</p:column>
+			</p:dataTable>
+		</h:form>
 		</p:panel>
 	</h:form>
 </html>
