--- a/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
@@ -7,54 +7,54 @@
 	<h:form>
 		<p:panel header="PatientManagement" >
 			<h:panelGrid columns="2">
-				<h:outputLabel for="name" value="Name " /> <p:inputText id="name" value="#{office.patientManagment.patient.name}"/> 
-				<h:outputLabel for="sname" value="Surname " /> <p:inputText id="sname" value="#{office.patientManagment.patient.surname}"/> 
-				<h:outputLabel for="comments" value="Comments " />
-				<h:inputTextarea id="comments" value="#{office.patientManagment.patient.comments}" label="comments"/>
-				<h:outputLabel value=" " />
-				<h:commandButton value="Create" action="#{office.patientManagment.createPatient()}" />
-			</h:panelGrid>
-			
-					<br />
-		<h:form id="patientListForm">
-			<p:dataTable value="#{office.patientManagment.patientList}" var="patient" id="patientList" editable="true"
-			 				rowKey="#{patient.id}"  selection="#{office.patientManagment.patient}" selectionMode="single">
-				<p:column headerText="id" sortBy="#{patient.id}" />
-				<p:column headerText="Name" sortBy="#{patient.name}">
-					<p:cellEditor>
-						<f:facet name="output">
-							<h:outputText value="#{patient.name}" />
-						</f:facet>
-						<f:facet name="input">
-							<p:inputText value="#{patient.name}" style="width:100%" />
-						</f:facet>
-					</p:cellEditor>
-				</p:column>
-				<p:column headerText="Surname" sortBy="#{patient.surname}">
-					<p:cellEditor>
-						<f:facet name="output">
-							<h:outputText value="#{patient.surname}" />
-						</f:facet>
-						<f:facet name="input">
-							<p:inputText value="#{patient.surname}" style="width:100%" />
-						</f:facet>
-					</p:cellEditor>
-				</p:column>
-				<p:column headerText="Comments" sortBy="#{patient.comments}">
-					<p:cellEditor>
-						<f:facet name="output">
-							<h:outputText value="#{patient.comments}" />
-						</f:facet>
-						<f:facet name="input">
-							<p:inputText value="#{patient.comments}" style="width:100%" />
-						</f:facet>
-					</p:cellEditor>
-				</p:column>
-				<p:column headerText="Options" style="width:50px">
-					<p:rowEditor />
-				</p:column>
-			</p:dataTable>
-		</h:form>
+				<p:dataTable value="#{office.patientManagment.patientList}" var="patient" id="patientList" editable="true"
+				 				rowKey="#{patient.id}"  selection="#{office.patientManagment.selectedPatient}" selectionMode="single">
+					<p:column headerText="id" sortBy="#{patient.id}" />
+					<p:column headerText="Name" sortBy="#{patient.name}">
+						<p:cellEditor>
+							<f:facet name="output">
+								<h:outputText value="#{patient.name}" />
+							</f:facet>
+							<f:facet name="input">
+								<p:inputText value="#{patient.name}" style="width:100%" />
+							</f:facet>
+						</p:cellEditor>
+					</p:column>
+					<p:column headerText="Surname" sortBy="#{patient.surname}">
+						<p:cellEditor>
+							<f:facet name="output">
+								<h:outputText value="#{patient.surname}" />
+							</f:facet>
+							<f:facet name="input">
+								<p:inputText value="#{patient.surname}" style="width:100%" />
+							</f:facet>
+						</p:cellEditor>
+					</p:column>
+					<p:column headerText="Comments" sortBy="#{patient.comments}">
+						<p:cellEditor>
+							<f:facet name="output">
+								<h:outputText value="#{patient.comments}" />
+							</f:facet>
+							<f:facet name="input">
+								<p:inputText value="#{patient.comments}" style="width:100%" />
+							</f:facet>
+						</p:cellEditor>
+					</p:column>
+					<p:column headerText="Options" style="width:50px">
+						<p:rowEditor />
+					</p:column>
+				</p:dataTable>
+				<h:panelGrid columns="2">
+					<h:outputLabel for="name" value="Name " /> <p:inputText id="name" value="#{office.patientManagment.createPatient.name}"/> 
+					<h:outputLabel for="sname" value="Surname " /> <p:inputText id="sname" value="#{office.patientManagment.createPatient.surname}"/> 
+					<h:outputLabel for="comments" value="Comments " />
+					<h:inputTextarea id="comments" value="#{office.patientManagment.createPatient.comments}" label="comments"/>
+					<h:outputLabel value=" " />
+					<h:commandButton value="Create" action="#{office.patientManagment.createPatient()}" />
+				</h:panelGrid>
+				
+				
+			</h:panelGrid>	
 		</p:panel>
 	</h:form>
 </html>
