activities cdi proj structure

--- a/Cloudental-cdi/src/main/webapp/screens/office.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/office.xhtml
@@ -11,7 +11,7 @@
 			<ui:include src="/screens/scheduler.xhtml"/>
 		</ui:define>
 		<ui:define name="patients">
-			<ui:include src="/screens/patients.xhtml"/>
+			<ui:include src="/screens/patientManagement.xhtml"/>
 		</ui:define>
 	</ui:composition>
 </html>
