added login and create new user caps to the welcome screen added two style sheets added jQuery.js added 3pngs (2logos and 1for new-user)

--- a/Cloudental-cdi/src/main/webapp/screens/base/footer.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/footer.xhtml
@@ -5,8 +5,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
 	<h:body>
-   		<h:link value="Create New User" outcome="/screens/createUser" /><br/>
-   		<h:link value="Login" outcome="/screens/welcome" />
+   		<!--  h:link value="Create New User" outcome="/screens/createUser" /><br/ -->
+   		<!--  h:link value="Login" outcome="/screens/welcome" / -->
 	</h:body>
  
    
