--- a/Cloudental-cdi/src/main/webapp/screens/base/header.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/header.xhtml
@@ -4,9 +4,5 @@
       xmlns:h="http://java.sun.com/jsf/html" 
       xmlns:f="http://java.sun.com/jsf/core">
 
-   <h:body>
-   Welcome to CloudDental
-   </h:body>
-   
-   
+   <h:body/>
 </html>
