1. added var _basename to BaseBean for better logging and added an string identifier to all extending beans 2. Office to View scope and Login to Session ... 3. added PROJECT_STAGE param 4. copied over from -web styles : cloudent.css 5. copied over from -web jscripts : cloudent.js 6. footer now shows the PROJECT_STAGE

--- a/Cloudental-cdi/src/main/webapp/screens/base/footer.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/footer.xhtml
@@ -7,6 +7,8 @@
 	<h:body>
    		<!--  h:link value="Create New User" outcome="/screens/createUser" /><br/ -->
    		<!--  h:link value="Login" outcome="/screens/welcome" / -->
+   		<h:outputText value="Stage:#{facesContext.application.projectStage}"/>
+   		
 	</h:body>
  
    
