1. New Login Screen !!!! 2. Login service is now request scoped and uses office    reception on session, sets loggedIn state 3. Renamed officeState to officeReception, session scoped , 	keeps user id and loggedIn state 4. crateBean renamed to createUserService (@Named) 5. Added 3 new logo images 6. crated xhtml officeReception 7. added navigation rule to receptino area 8. added css login styles 9. changed prime-faces skin to south-street! 10. removed random import on DentistBean

--- a/Cloudental-cdi/src/main/webapp/screens/scheduler.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/scheduler.xhtml
@@ -4,7 +4,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-	<p:schedule value="#{office.visitModel}" editable="true" widgetVar="visitSchedule">
+	<p:schedule value="#{office.scheduleControler.model}" editable="true" widgetVar="visitSchedule">
 		<p:ajax event="dateSelect" listener="#{office.scheduleControler.onDateSelect}" update="eventDetails" oncomplete="eventDialog.show()" />
 		<p:ajax event="eventSelect" listener="#{office.scheduleControler.onEventSelect}" update="eventDetails" oncomplete="eventDialog.show()" />
 	</p:schedule>
