just the new user missing!!

--- a/Cloudental-cdi/src/main/webapp/screens/login.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/login.xhtml
@@ -6,11 +6,11 @@
 
 	<h:head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Untitled Document</title>
+		<title>Cloudental 0.2</title>
 		<link href="../resources/css/login-style.css" rel="stylesheet" type="text/css" />
 		<style type="text/css">
 		body {
-			background-image: url(../resources/images/cloudM7.png);
+			background-image: url(../resources/images/cloudM8.png);
 			background-repeat: no-repeat;
 			margin-left: 10px;
 			margin-top: 10px;
@@ -25,7 +25,7 @@
 	        <h:form id="form1" name="form1" method="post" action="">
 	           <p:inputText value="#{loginService.name}" id="username" required="true" label="username" styleClass="username"/>  
 	           <h:inputSecret value="#{loginService.password}" id="password" required="true" label="password" styleClass="password" />
-	           <h:commandButton id="loginButton" value="Login" action="#{loginService.login}" styleClass="lbutton"/>    
+	           <h:commandButton id="loginButton" value="Enter" action="#{loginService.login}" styleClass="lbutton"/>    
 	        </h:form>
 		</div>
 	</body>
